# invoice-billing-server

./: .env.dev  .env.example  .env.local  .env.staging  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  docker-compose.yml  fly.toml  sqlx-data.json
.github/: staging-deploy.yml
migrations/: 20221006184649_create_users_table.up.sql  20221208135816_create_oauth_access_tokens_table.down.sql  20221212110218_create_merchants_table.down.sql  20221212110218_create_merchants_table.up.sql  20221213110336_create_contact_channels_table.down.sql  20221213110336_create_contact_channels_table.up.sql  20221213114333_insert_contact_channels_seed.up.sql  20221213120207_create_customers_table.up.sql  20221213120554_create_customer_contact_channels_table.down.sql  20221213120554_create_customer_contact_channels_table.up.sql  20221213161400_create_invoices_table.up.sql  20221214104302_create_job_schedules_table.up.sql  20221214105608_create_job_queues_table.down.sql  20221214105608_create_job_queues_table.up.sql  20230101061308_add_title_desc_to_invoices_table.down.sql  20230101061308_add_title_desc_to_invoices_table.up.sql  20230101143901_create_testers_table.down.sql  20230101143901_create_testers_table.up.sql  20230101143903_add_status_id_to_users_table.down.sql  20230101143903_add_status_id_to_users_table.up.sql  20230105100113_add_tags_to_customers_table.down.sql  20230105100113_add_tags_to_customers_table.up.sql  20230201092506_create_verification_table.down.sql  20230201092506_create_verification_table.up.sql  20230204122000_add_tax_address_phone_to_merchants_table.down.sql  (+8 more)
(+51 files in other folders)
