[package]
name = "invoice-billing-server"
version = "0.2.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { git="https://github.com/tokio-rs/axum.git", release = "axum-v0.6.1", features = [ "multipart" ] }
rust_decimal = "1.26.1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.21.2", features = ["full"] }
chrono = { version = "0.4.20", features = ["serde"] }
uuid = { version = "1.1.2", features = ["serde", "v4"] }
sqlx = { version = "0.6", features = ["offline", "runtime-tokio-native-tls" , "postgres", "uuid", "chrono", "json", "decimal"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.75"
rust-argon2 = "1.0.0"
crypto-hash = "0.3.4"
validator = "0.16.0"
validator_derive = "0.16.0"
itoa = "1.0.3"
config = "0.13.2"
dotenvy = "0.15.5"
calamine = "0.19.1"
tracing = "0.1"
tracing-subscriber = "0.3"
tower = "0.4.13"
tower-layer = "0.3.2"
tower-http = { version= "0.3.5", features = ["cors"] }
cron = "0.12.0"
rand = "0.8.5"
lettre = "0.10"

[profile.dev.package.sqlx-macros]
opt-level = 3
